<resources>
    <string name="app_name">Manaper</string>
    <string name="authEmailOrPhone">Phone</string>
    <string name="authPassword">Password</string>
    <string name="authForgetPassword">Forget password ?</string>
    <string name="authLogin">Login</string>
    <string name="authCompanySignUp">Sign up as company</string>
    <string name="authEmailSendCode">Send code</string>
    <string name="authSubmitCode">Submit</string>
    <string name="authNewPassword">New password</string>
    <string name="authConfirmPassword">Confirm password</string>
    <string name="authResetPassword">Reset password</string>
    <string name="signUpName">Name</string>
    <string name="signUpEmail">Email</string>
    <string name="SignUpPhone">Phone</string>
    <string name="acceptTerms">terms and condition</string>
    <string name="signUpBtn">Create account</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menuLastTrip">Last Trip</string>
    <string name="menuAddTrip">Add Trip</string>
    <string name="menuNotfication">Notfication</string>
    <string name="menuVideo">Video</string>
    <string name="menuSuggestion">Suggestion</string>
    <string name="menuContact">Contact Us</string>
    <string name="menuAbout">About Us</string>
    <string name="menuLogOut">Log Out</string>
    <string name="textHolder">Name</string>

    <string name="tabArrivalText">Arrival</string>
    <string name="tabFirstCityText">First City</string>
    <string name="tabSecondCityText">Second City</string>
    <string name="tabDepartureCityText">Departure</string>
    <string name="tripDetailsText">Trip Details</string>
    <string name="AirLinesText">AirLines</string>
    <string name="AirPortText">AirPort</string>
    <string name="tripNumberText">Trip number</string>
    <string name="dateText">Date</string>
    <string name="timeText">Time</string>
    <string name="personsText">Persons</string>
    <string name="superVisorText">SuperVisor</string>
    <string name="phoneNumberText">Phone number</string>
    <string name="btnShareText">Share</string>
    <string name="MadinhaHotelText">Madinha hotel</string>
    <string name="FromText">From</string>
    <string name="toDateText">To</string>
    <string name="nightsText">Nights</string>
    <string name="descriptionText">Description</string>
    <string name="manaperTransportText">Manaber Transport</string>
    <string name="attractivePlacesText">Attractive Places</string>
    <string name="attractiveDateText">Attractive Date</string>
    <string name="attractiveTimeText">Attractive time</string>
    <string name="makkahHotelText">Makkah Hotel</string>
    <string name="lastTripsText">Last trips</string>
    <string name="FirstDestinationText">First destination</string>
    <string name="transportText">Transport</string>
    <string name="secondDestinationText">Second Destination</string>
    <string name="departureDestinationText">Departure Details</string>

    <string name="title_notifications">Notifications</string>
    <string name="btnNextText">Next</string>
    <string name="addArrivalInfoText">Arrival Information</string>
    <string name="countryText">Country</string>
    <string name="secondCountry">Second country</string>
    <string name="hotelNameText">Hotel</string>
    <string name="placesText">Places</string>
    <string name="countryFirst">First country</string>
    <string name="infoText">Information</string>
    <string name="btnFinishText">Finish</string>
    <string name="languageChangeText">Language</string>
    <string name="arabicLanguage">Arabic</string>
    <string name="englishLanguage">English</string>

    <string name="contactUsText">is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry when an unknown
        and more recently with desktop publishing</string>
    <string name="titleContacts">Contacts us</string>
    <string name="titleSuggestion">Suggestions</string>
    <string name="suggestTitleText">title</string>
    <string name="suggestBodyHint">write message...</string>
    <string name="suggestSendBtn">Send</string>
    <string name="titleAbout">About us</string>
    <string name="logOut">Do you want to exit ?</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>

    <!-- TODO: Mandop placeholder text -->
    <string name="btnAcceptText">Accept</string>
    <string name="mandopArrivalText">Arrival Details</string>
    <string name="mandopSecondDirection">Second Direction</string>
    <string name="mandopFirstDirection">First Direction</string>
    <string name="transportationText">Transportation</string>
    <string name="menuUrgetTrip">Urgent Trips</string>
    <string name="menuMyTrips">My Trips</string>
    <string name="tabMandopTodayText">Today</string>
    <string name="tabMandopTomorrowText">Tomorrow</string>
    <string name="tabMandopAllTripsText">All Trips</string>
    <string name="titleTrips">Trips</string>

    <string name="select_Type">Select type</string>
    <string name="manaper">Manaper Transportation</string>
    <string name="other">Other</string>
    <string name="company_Type">company</string>
    <string name="delegate_Type">delegate </string>
    <string name="titleLateReason">Late Reason</string>
    <string name="notMatchedPasswords">Passwords does not match</string>
    <string name="label_cities">Cities</string>
    <string name="emptyData">Please fill all Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyListData">There is no tripSections</string>
    <string name="tabThirdCityText">ThirdCity</string>
    <string name="emptyFields">Please Fill All Fields</string>
    <string name="testText">test</string>
    <string name="emptyPlaces">Please Places Data</string>
    <string name="channel_name">userCh</string>
    <string name="channel_description">userChannel</string>
    <string name="updateProfile">Update</string>
    <string name="transText">Yes</string>
    <string name="showPlacesHint">Show Places</string>
    <string name="emptyList">There is no data</string>
    <string name="receivedStatus">Recieved</string>
    <string name="addPlaceEmpty">Please hit plus button to confirm your place</string>
    <string name="exitText">Are you want to exit ?</string>
    <string name="itemDelete">Are you want to delete this item ?</string>
    <string name="garndTitle">تصميم وبرمجة</string>
    <string name="grandName">GRAND</string>
    <string name="grandSite">www.2Grand.net</string>
    <string name="grandPhone">00201157771069</string>
    <string name="grandWhatsApp">واتساب</string>
    <string name="grandCall">اتصال</string>
    <string name="loginNotActive">User not active</string>
    <string name="connection_vaild_msg">Connection successfully</string>
    <string name="connection_invaild_msg">Connection Faild</string>
    <string name="REGISTERED">Code Sent Successfully</string>
    <string name="checkIn">Check In</string>
    <string name="checkOut">Check out</string>
    <string name="arrivalNum">Landing</string>
    <string name="departureNum">Flight</string>
    <string name="dateValidation">You Must Choose date after " "</string>
    <string name="activeStatus">Please wait unill admin active your account</string>

</resources>
