<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grand_dialog"
    app:cardCornerRadius="@dimen/dp8h">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/garndTitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/dialogClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp30h"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/dp2h"
                android:layout_marginTop="@dimen/dp4h"
                android:src="@mipmap/ic_close" />
        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/dp60w"
            android:layout_height="@dimen/dp60h"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/grand" />

        <TextView
            android:id="@+id/grandName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp4h"
            android:text="@string/grandName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/grandSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp4h"
            android:text="@string/grandSite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/grandPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp4h"
            android:text="@string/grandPhone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp4h"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/drakOrange"
                app:cardCornerRadius="@dimen/dp4h">

                <TextView
                    android:id="@+id/whatsApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableStart="@drawable/ic_whatsapp"
                    android:gravity="center_vertical"
                    android:text="@string/grandWhatsApp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp4h"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/drakOrange"
                app:cardCornerRadius="@dimen/dp4h">

                <TextView
                    android:id="@+id/grandCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableStart="@drawable/ic_call"
                    android:gravity="center_vertical"
                    android:text="@string/grandCall"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>