<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8h"
        android:gravity="center_horizontal"
        android:text="@string/logOut"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp4h">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/dp4h"
            android:layout_marginStart="@dimen/dp8h"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="@dimen/dp4h">

            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/yesText" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/dp4h"
            android:layout_marginEnd="@dimen/dp8h"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="@dimen/dp4h">

            <Button
                android:id="@+id/reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/noText" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>