<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="app.manaper.viewModels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shared_logo_item" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_marginStart="@dimen/dp16w"
                android:layout_marginTop="@dimen/dp16h"
                app:cardCornerRadius="@dimen/dp8h"
                app:cardElevation="@dimen/dp4h">

                <app.manaper.base.CustomEditText
                    android:id="@+id/authEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:hint="@string/signUpEmail"
                     android:inputType="text|textEmailAddress"
                    android:padding="@dimen/dp8h"
                    android:text="@={loginViewModel.userDetails.loginkey}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_marginStart="@dimen/dp16w"
                app:cardCornerRadius="@dimen/dp8h"
                app:cardElevation="@dimen/dp4h">

                <app.manaper.base.CustomEditText
                    android:id="@+id/authPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:hint="@string/authPassword"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp8h"
                    android:text="@={loginViewModel.userDetails.password}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp16w"
                android:layout_marginStart="@dimen/dp16w"
                android:gravity="right"
                android:onClick="@{() -> loginViewModel.forgetPassword()}"
                android:padding="@dimen/dp4h"
                android:text="@string/authForgetPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/corner_view"
                android:onClick="@{() -> loginViewModel.signIn()}"
                android:text="@string/authLogin"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8h"
                android:gravity="center_horizontal"
                android:onClick="@{() -> loginViewModel.signUpCompany()}"
                android:padding="@dimen/dp4h"
                android:text="@string/authCompanySignUp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</layout>