<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp8h"
    app:cardElevation="@dimen/dp8h">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16h"
            android:gravity="center_horizontal"
            android:text="@string/languageChangeText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp16h"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="@dimen/dp4w">

            <Button
                android:id="@+id/arBtn"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:text="@string/arabicLanguage" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp16h"
            android:layout_marginEnd="@dimen/dp16h"
            android:layout_marginBottom="@dimen/dp8h"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="@dimen/dp4w">

            <Button
                android:id="@+id/enBtn"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:text="@string/englishLanguage" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>